[tool.poetry]
name = "volume"
version = "0.1.0"
description = ""
authors = ["Heki <h3k1ru@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.5"}
pydantic = "^2.3.0"
discord-webhook = {extras = ["async"], version = "^1.3.0"}
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
